--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,7 @@
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
   <welcome-file-list>
-    <welcome-file>/jsps/home.jsp</welcome-file>
-  </welcome-file-list>
+  <welcome-file>jsps/home.jsp</welcome-file>
+</welcome-file-list>
+
 </web-app>
